# quicksearch-rs

./: Cargo.toml  flake.nix
.github/workflows/: docker_image.yaml
src/: main-unformatted.rs  main.rs
